[package]
name = "lofire-broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debug_print = "1.0.0"
lofire = { path = "../lofire" }
lofire-net = { path = "../lofire-net" }
blake3 = "1.3.1"
chacha20 = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_bare = "0.5.0"
serde_bytes = "0.11.7"
xactor = "0.7.11"
async-std = {  version = "1.7.0", features = ["attributes"] }
async-trait = "0.1.57"
async-broadcast = "0.4.1"
futures = "0.3.24"
async-oneshot = "0.5.0"
rust-fsm = "0.6.0"
getrandom = "0.2.7"
