[package]
name = "lofire-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lofire = { path = "../lofire" }
lofire-broker = { path = "../lofire-broker" }

[dependencies.async-std]
version = "1.7.0"
features = ["attributes"]