[package]
name = "lofire-store-lmdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lofire = { path = "../lofire" }
debug_print = "1.0.0"
rkv = { git = "https://github.com/p2pcollab/rkv.git", branch = "main", features = ["lmdb"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_bare = "0.5.0"
tempfile = "3"